Add Render deployment config: Dockerfile, PostgreSQL support, dynamic CORS/API URLs, render.yaml blueprint